deploy/deploy_tasks_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: db-tasks
 labels:
  app: db-tasks
spec:
 selector:
  matchLabels:
   app: db-tasks
 template:
  metadata:
   labels:
    app: db-tasks
  spec:
   containers:
   - name: db-tasks
     image: nikitasinc/db_tasks
     ports:
     - containerPort: 5432
