deploy/deploy_web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: web
spec:
 selector:
  matchLabels:
   app: web
 template:
  metadata:
   labels:
    app: web
  spec:
   containers:
    - name: web
      image: nikitasinc/clojure-first-app
      ports:
      - containerPort: 8080
