deploy/service_tasks_db.yaml
apiVersion: v1
kind: Service
metadata:
 name: db-tasks
 labels:
  app: db
spec:
 type: NodePort
 ports:
 - port: 5432
 selector:
  app: db
