deploy/service_web.yaml
apiVersion: v1
kind: Service
metadata:
 name: web
spec:
 selector: 
  app: web
 ports:
 - port: 8080
   protocol: TCP
   targetPort: 8080
