deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress
spec:
 rules:
 - http:
    paths:
     - path: /
       pathType: Prefix
       backend:
        service:
         name: web
         port:
          number: 8080
